--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,6 +23,22 @@ main {
   box-shadow: 0 0 0 0.2rem rgb(0, 203, 151);
 }
 
+.carousel-image {
+  width: 100%;
+  height: 80vh;
+  object-fit: cover;
+}
+
+.carousel-caption--h2 {
+  font-size: 2rem;
+  color: #eee;
+  text-shadow: 2px 4px 0.2rem #444;
+}
+
+.carousel-indicators .active {
+  background-color: #00cb97;
+}
+
 .nav-profile {
   margin: 0 0 0 0.9rem;
 }
@@ -55,6 +71,7 @@ main {
 h1 {
   font-size: 1.8rem;
   padding: 1rem 0;
+  text-align: center;
 }
 
 h2 {
