--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -48,6 +48,11 @@ main {
   margin-right: 0.2rem;
 }
 
+.pagination {
+  justify-content: center;
+  margin: 2.5rem 0;
+}
+
 .footer {
   background-color: #333;
   color: #eee;
